Ajout de decks cycle 3 série 3

--- a/decks/cycle3/nombres/1.5.representer_entier_axe.md
+++ b/decks/cycle3/nombres/1.5.representer_entier_axe.md
@@ -1,282 +1,255 @@
 ---
-Question: Place la fraction $\dfrac{1}{4}$ sur la droite graduée.
+Question: Place le nombre $57$ sur la droite graduée.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 50, max = 60;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2); // Affiche 50, 55, 60
+  const minorTicks = scale.ticks(10); // Graduations de 1 en 1
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Voici $\dfrac{1}{4}$.
+Réponse: Voici la position de $57$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 50, max = 60;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2);
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(1/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'orange');
+  svg.append('circle').attr('cx', scale(57)).attr('cy', height / 2).attr('r', 8).attr('fill', 'red');
 "></div>
 ---
-Question: Quelle fraction est indiquée par le point rouge ?
+Question: Quelle population indique le graphique pour la ville B ?
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(5).tickFormat(d3.format('d')); // Graduations de 200 en 200
+  const minorTicks = scale.ticks(10); // Graduations de 100 en 100
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(3/2)).attr('cy', height / 2).attr('r', 8).attr('fill', 'red');
+  svg.append('text').text('B 🏙️').attr('x', scale(800)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: C'est la fraction $\dfrac{3}{2}$.
+Réponse: La ville B a $800$ habitants.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(5).tickFormat(d3.format('d'));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(3/2)).attr('cy', height / 2).attr('r', 8).attr('fill', 'red');
+  svg.append('text').text('B 🏙️').attr('x', scale(800)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Place la fraction $\dfrac{4}{5}$ sur la droite graduée.
+Question: Place le nombre $650$ sur cette droite où seules les bornes sont indiquées.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  // Affiche seulement 0 et 1000
+  const axis = d3.axisBottom(scale).tickValues([0, 1000]).tickFormat(d3.format('d'));
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
-  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Position de $\dfrac{4}{5}$.
+Réponse: $650$ se situe environ ici.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).tickValues([0, 1000]).tickFormat(d3.format('d'));
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
-  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(4/5)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
+  svg.append('circle').attr('cx', scale(650)).attr('cy', height / 2).attr('r', 8).attr('fill', 'darkcyan');
 "></div>
 ---
-Question: Quelle fraction est indiquée par le point violet ?
+Question: L'Homme a marché sur la Lune 🌕 en 1969. Place cette date sur la frise du 20ème siècle.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 1900, max = 2000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d')); // Affiche 1900, 1950, 2000
+  const minorTicks = scale.ticks(10); // Graduations de 10 en 10
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(7/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'purple');
 "></div>
-Réponse: La fraction est $\dfrac{7}{4}$.
+Réponse: Voici l'année $1969$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 1900, max = 2000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d'));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(7/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'purple');
+  svg.append('text').text('🌕').attr('x', scale(1969)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Place la fraction $\dfrac{5}{3}$ sur la droite graduée.
+Question: La population de la ville 🏙️ est de 4 250 habitants. Place ce nombre sur l'axe.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 3;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 4000, max = 5000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' ')); // Affiche 4 000, 4 500, 5 000
+  const minorTicks = scale.ticks(10); // Graduations de 100 en 100
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Emplacement de $\dfrac{5}{3}$.
+Réponse: Population : $4 250$ habitants.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 3;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 4000, max = 5000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' '));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(5/3)).attr('cy', height / 2).attr('r', 8).attr('fill', 'steelblue');
+  svg.append('text').text('🏙️').attr('x', scale(4250)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Sur la carte, où se trouve le trésor 💎 ?
+Question: En Antarctique, la température 🥶 est descendue à -44°C. Place cette température sur le thermomètre.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' km');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = -50, max = -30;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d + '°C'); // Affiche -50, -40, -30
+  const minorTicks = scale.ticks(10); // Graduations de 2 en 2
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('💎').attr('x', scale(13/10)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: Le trésor est à $\dfrac{13}{10}$ km.
+Réponse: Voici la température de $-44°C$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' km');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = -50, max = -30;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d + '°C');
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('💎').attr('x', scale(13/10)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
-"></div>
-
----
-Question: Quelle fraction est indiquée par le point vert ?
-
-<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
-  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
-  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(2/5)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
-"></div>
-Réponse: C'est la fraction $\dfrac{2}{5}$.
-<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
-  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
-  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(2/5)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
+  svg.append('text').text('🥶').attr('x', scale(-44)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Place la fraction $\dfrac{9}{10}$ sur la droite graduée.
+Question: Quelle distance indique le compteur de la voiture 🚗 ?
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 80000, max = 90000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d/1000 + ' 000 km'); // Affiche 80 000, 85 000, 90 000
+  const minorTicks = scale.ticks(10); // Graduations de 1000 en 1000
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
+  svg.append('text').text('🚗').attr('x', scale(82000)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: Voici $\dfrac{9}{10}$.
+Réponse: La voiture a parcouru $82 000$ km.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 80000, max = 90000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d/1000 + ' 000 km');
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(9/10)).attr('cy', height / 2).attr('r', 8).attr('fill', 'teal');
+  svg.append('text').text('🚗').attr('x', scale(82000)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Place la fraction $\dfrac{11}{4}$ sur la droite graduée.
+Question: Place le nombre $15$ sur cette droite graduée de 2 en 2.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 10, max = 20;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(5); // Graduations de 2 en 2
+  const minorTicks = scale.ticks(10); // Graduations de 1 en 1
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Position de $\dfrac{11}{4}$.
+Réponse: Voici la position de $15$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 10, max = 20;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(5);
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(11/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'navy');
+  svg.append('circle').attr('cx', scale(15)).attr('cy', height / 2).attr('r', 8).attr('fill', 'gold');
 "></div>
 ---
-Question: Une recette demande $\dfrac{3}{2}$ litres de lait. Indique cette quantité sur le verre mesureur.
+---
+Question: La distance entre deux villes est de 320 km. Place le point 📍 sur la carte pour indiquer cette distance.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' L');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 300, max = 400;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d + ' km'); // Affiche 300, 350, 400
+  const minorTicks = scale.ticks(10); // Graduations de 10 en 10
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Voici $\dfrac{3}{2}$ litres.
+Réponse: Voici la distance de $320$ km.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' L');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 300, max = 400;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d + ' km');
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('🥛').attr('x', scale(3/2)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
+  svg.append('text').text('📍').attr('x', scale(320)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: L'escargot 🐌 a avancé sur la règle. Quelle distance en cm a-t-il parcourue ?
+Question: Quel est le score du joueur 🎮 sur cette barre de points ?
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' cm');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 50000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' ')); // Affiche 0, 25 000, 50 000
+  const minorTicks = scale.ticks(10); // Graduations de 5 000 en 5 000
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('🐌').attr('x', scale(9/4)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
+  svg.append('text').text('🎮').attr('x', scale(45000)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: Il a parcouru $\dfrac{9}{4}$ cm.
+Réponse: Le score est de $45 000$ points.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' cm');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 50000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' '));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('🐌').attr('x', scale(9/4)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
+  svg.append('text').text('🎮').attr('x', scale(45000)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Place la fraction $\dfrac{2}{2}$ sur la droite graduée.
+Question: Place le nombre $975$ sur la droite graduée.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 900, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2); // Affiche 900, 950, 1000
+  const minorTicks = scale.ticks(10); // Graduations de 10 en 10
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: $\dfrac{2}{2}$ est égal à 1.
+Réponse: Voici la position de $975$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 900, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2);
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(2/2)).attr('cy', height / 2).attr('r', 8).attr('fill', 'black');
+  svg.append('circle').attr('cx', scale(975)).attr('cy', height / 2).attr('r', 8).attr('fill', 'olive');
 "></div>
+---
+Question: La hauteur de cette montagne ⛰️ est de 3080 mètres. Place-la sur l'axe.
+
+<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
+  const min = 3000, max = 3100;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d + ' m'); // Affiche 3000, 3050, 3100
+  const minorTicks = scale.ticks(10); // Graduations de 10 en 10
+  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
+  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
+"></div>
+Réponse: Altitude : $3080$ mètres.
+<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
+  const min = 3000, max = 3100;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d + ' m');
+  const minorTicks = scale.ticks(10);
+  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
+  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
+  svg.append('text').text('⛰️').attr('x', scale(3080)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
+"></div>
+---
+
