--- a/decks/cycle3/nombres/1.4.graduer_axe_entiers.md
+++ b/decks/cycle3/nombres/1.4.graduer_axe_entiers.md
@@ -1,282 +1,261 @@
 ---
-Question: Place la fraction $\dfrac{1}{4}$ sur la droite graduée.
+Question: Place le nombre $245$ sur la droite graduée ci-dessous.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 200, max = 300;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2); // Affiche 200, 250, 300
+  const minorTicks = scale.ticks(10); // Graduations de 10 en 10
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Voici $\dfrac{1}{4}$.
+Réponse: Voici la position de $245$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 200, max = 300;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2);
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(1/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'orange');
+  svg.append('circle').attr('cx', scale(245)).attr('cy', height / 2).attr('r', 8).attr('fill', 'blue');
 "></div>
 ---
-Question: Quelle fraction est indiquée par le point rouge ?
+Question: Quelle température indique le thermomètre 🌡️ ?
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 40;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(4).tickFormat(d => d + '°C'); // Graduations de 10 en 10
+  const minorTicks = scale.ticks(20); // Graduations de 2 en 2
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(3/2)).attr('cy', height / 2).attr('r', 8).attr('fill', 'red');
+  svg.append('text').text('🌡️').attr('x', scale(28)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: C'est la fraction $\dfrac{3}{2}$.
+Réponse: Le thermomètre indique $28°C$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 40;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(4).tickFormat(d => d + '°C');
+  const minorTicks = scale.ticks(20);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(3/2)).attr('cy', height / 2).attr('r', 8).attr('fill', 'red');
+  svg.append('text').text('🌡️').attr('x', scale(28)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Place la fraction $\dfrac{4}{5}$ sur la droite graduée.
+Question: Un avion ✈️ vole à une altitude de 7 500 mètres. Place-le sur l'altimètre.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 10000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  // Affiche 0, 5000, 10000
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d'));
+  // Graduations de 1000 en 1000
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Position de $\dfrac{4}{5}$.
+Réponse: Altitude : $7 500$ mètres.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 10000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d'));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(4/5)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
+  svg.append('text').text('✈️').attr('x', scale(7500)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Quelle fraction est indiquée par le point violet ?
+Question: Quel nombre est indiqué par le point orange sur cette droite graduée de 50 en 50 ?
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d')); // Affiche 0, 500, 1000
+  const minorTicks = scale.ticks(20); // Graduations de 50 en 50
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(7/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'purple');
+  svg.append('circle').attr('cx', scale(650)).attr('cy', height / 2).attr('r', 8).attr('fill', 'orange');
 "></div>
-Réponse: La fraction est $\dfrac{7}{4}$.
+Réponse: Le nombre est $650$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d'));
+  const minorTicks = scale.ticks(20);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(7/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'purple');
+  svg.append('circle').attr('cx', scale(650)).attr('cy', height / 2).attr('r', 8).attr('fill', 'orange');
 "></div>
 ---
-Question: Place la fraction $\dfrac{5}{3}$ sur la droite graduée.
+Question: La Fête de la Fédération 📜 a eu lieu en 1790 (1 an après la Révolution Française). Place cette date sur la frise chronologique.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 3;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 1700, max = 1800;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(4).tickFormat(d3.format('d')); // Graduations de 25 en 25
+  const minorTicks = scale.ticks(10); // Graduations de 10 en 10
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Emplacement de $\dfrac{5}{3}$.
+Réponse: Voici l'année $1790$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 3;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 1700, max = 1800;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(4).tickFormat(d3.format('d'));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(5/3)).attr('cy', height / 2).attr('r', 8).attr('fill', 'steelblue');
+  svg.append('text').text('📜').attr('x', scale(1790)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Sur la carte, où se trouve le trésor 💎 ?
+Question: Place le nombre $350 000$ sur la droite graduée.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' km');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  // Affiche 0, 500000, 1000000
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' '));
+  // Graduations de 100 000 en 100 000
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('💎').attr('x', scale(13/10)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: Le trésor est à $\dfrac{13}{10}$ km.
+Réponse: Voici la position de $350 000$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' km');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 1000000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' '));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('💎').attr('x', scale(13/10)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
-"></div>
-
----
-Question: Quelle fraction est indiquée par le point vert ?
-
-<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
-  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
-  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(2/5)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
-"></div>
-Réponse: C'est la fraction $\dfrac{2}{5}$.
-<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 5;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
-  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
-  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(2/5)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
+  svg.append('circle').attr('cx', scale(350000)).attr('cy', height / 2).attr('r', 8).attr('fill', 'magenta');
 "></div>
 ---
-Question: Place la fraction $\dfrac{9}{10}$ sur la droite graduée.
+Question: Quel prix indique l'étiquette 💰 ?
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 100;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(4).tickFormat(d => d + ' €'); // Graduations de 25 en 25
+  const minorTicks = scale.ticks(20); // Graduations de 5 en 5
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
+  svg.append('text').text('💰').attr('x', scale(85)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: Voici $\dfrac{9}{10}$.
+Réponse: L'étiquette indique $85$ €.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 1;
-  const denominator = 10;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 0, max = 100;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(4).tickFormat(d => d + ' €');
+  const minorTicks = scale.ticks(20);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(9/10)).attr('cy', height / 2).attr('r', 8).attr('fill', 'teal');
+  svg.append('text').text('💰').attr('x', scale(85)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: Place la fraction $\dfrac{11}{4}$ sur la droite graduée.
+Question: Place le nombre $475$ sur la droite graduée de 25 en 25.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 400, max = 500;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d')); // Affiche 400, 450, 500
+  const minorTicks = scale.ticks(4); // Graduations de 25 en 25
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Position de $\dfrac{11}{4}$.
+Réponse: Voici l'emplacement de $475$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 400, max = 500;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d'));
+  const minorTicks = scale.ticks(4);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(11/4)).attr('cy', height / 2).attr('r', 8).attr('fill', 'navy');
+  svg.append('circle').attr('cx', scale(475)).attr('cy', height / 2).attr('r', 8).attr('fill', 'brown');
 "></div>
 ---
-Question: Une recette demande $\dfrac{3}{2}$ litres de lait. Indique cette quantité sur le verre mesureur.
+Question: Dans le futur, la nouvelle Pyramide de Khéops 𓁈 sera achevée vers l'an 2560. Place cette date sur la frise chronologique.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' L');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 2000, max = 3000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d')); // Affiche 2000, 2500, 3000
+  const minorTicks = scale.ticks(10); // Graduations de 100 en 100
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: Voici $\dfrac{3}{2}$ litres.
+Réponse: Année $2560$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' L');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 2000, max = 3000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format('d'));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('🥛').attr('x', scale(3/2)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
+  svg.append('text').text(' 𓁈').attr('x', scale(2560)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
 ---
-Question: L'escargot 🐌 a avancé sur la règle. Quelle distance en cm a-t-il parcourue ?
+Question: Place le nombre $12 500$ sur la droite graduée.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' cm');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 10000, max = 15000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' ')); // Affiche 10 000, 12 500, 15 000
+  const minorTicks = scale.ticks(10); // Graduations de 500 en 500
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('🐌').attr('x', scale(9/4)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
-Réponse: Il a parcouru $\dfrac{9}{4}$ cm.
+Réponse: Voici la position de $12 500$.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 3;
-  const denominator = 4;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max).tickFormat(d => d + ' cm');
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 10000, max = 15000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d3.format(' '));
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('text').text('🐌').attr('x', scale(9/4)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
+  svg.append('circle').attr('cx', scale(12500)).attr('cy', height / 2).attr('r', 8).attr('fill', 'cyan');
 "></div>
 ---
-Question: Place la fraction $\dfrac{2}{2}$ sur la droite graduée.
+Question: Une fusée 🚀 atteint une vitesse de 28 000 km/h. Indique cette vitesse sur le compteur.
 
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 20000, max = 30000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d/1000 + ' 000'); // Affiche 20 000, 25 000, 30 000
+  const minorTicks = scale.ticks(10); // Graduations de 1000 en 1000
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
 "></div>
-Réponse: $\dfrac{2}{2}$ est égal à 1.
+Réponse: Vitesse de $28 000$ km/h.
 <div class="d3-container" style="width:400px; height:100px;" data-d3-code="
-  const max = 2;
-  const denominator = 2;
-  const scale = d3.scaleLinear().domain([0, max]).range([20, width - 20]);
-  const axis = d3.axisBottom(scale).ticks(max);
-  const minorTicks = Array.from({length: max * denominator + 1}, (_, i) => i / denominator);
+  const min = 20000, max = 30000;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(2).tickFormat(d => d/1000 + ' 000');
+  const minorTicks = scale.ticks(10);
   svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
   svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
-  svg.append('circle').attr('cx', scale(2/2)).attr('cy', height / 2).attr('r', 8).attr('fill', 'black');
+  svg.append('text').text('🚀').attr('x', scale(28000)).attr('y', height/2 - 10).attr('font-size', '24px').attr('text-anchor', 'middle');
 "></div>
+---
+Question: Quel nombre est indiqué par le point vert sur cette droite graduée de 2 en 2 ?
+
+<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
+  const min = 0, max = 20;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(10); // Graduations de 2 en 2
+  const minorTicks = scale.ticks(20); // Graduations de 1 en 1
+  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
+  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
+  svg.append('circle').attr('cx', scale(18)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
+"></div>
+Réponse: Le nombre est $18$.
+<div class="d3-container" style="width:400px; height:100px;" data-d3-code="
+  const min = 0, max = 20;
+  const scale = d3.scaleLinear().domain([min, max]).range([20, width - 20]);
+  const axis = d3.axisBottom(scale).ticks(10);
+  const minorTicks = scale.ticks(20);
+  svg.append('g').attr('transform', `translate(0, ${height / 2})`).call(axis).selectAll('text').style('font-size', '14px');
+  svg.selectAll('.minor-tick').data(minorTicks).enter().append('line').attr('class', 'minor-tick').attr('x1', d => scale(d)).attr('x2', d => scale(d)).attr('y1', height/2 - 5).attr('y2', height/2 + 5).attr('stroke', 'currentColor').attr('stroke-width', 0.5);
+  svg.append('circle').attr('cx', scale(18)).attr('cy', height / 2).attr('r', 8).attr('fill', 'green');
+"></div>
+---
